# JobSearch

./: .env.example  .gitignore  README.md  app.py  city_pipeline.py  database.py  exports.py  posted_dates.py  pyproject.toml  query.py  query_db.sh  requirements.txt  run.sh  run_dashboard.sh  run_scraper.sh  run_web.sh  scraper.py  setup.sh
.streamlit/: config.toml
api/: main.py
careers/: __init__.py  extract.py
docs/superpowers/plans/: 2026-07-22-react-fastapi.md  2026-07-22-shine-source.md
docs/superpowers/specs/: 2026-07-20-naukri-source-design.md  2026-07-20-rerun-past-search-design.md  2026-07-22-city-careers-design.md  2026-07-22-react-fastapi-design.md  2026-07-22-shine-source-design.md
pages/: 2_Run_Scraper.py
sources/: __init__.py  indeed.py  linkedin.py  naukri.py  overpass.py  shine.py
tests/: test_api.py  test_city_careers.py  test_export_xlsx.py  test_filter_search.py  test_job_listing_sort.py  test_purge_jobs.py  test_sources.py
web/src/: App.css  App.tsx  api.ts  dates.ts  index.css  main.tsx
web/src/pages/: CityCareersPage.tsx  JobsPage.tsx  ScraperPage.tsx
