[project]
name = "linkedin-job-scraper"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "apify-client",
    "python-dotenv",
    "pandas",
    "tabulate",
    "streamlit",
    "plotly",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
