[project]
name = "linkedin-job-scraper"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "apify-client",
    "python-dotenv",
    "pandas",
    "tabulate",
    "fastapi",
    "uvicorn[standard]",
    "certifi",
    "openpyxl",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
